--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -86,3 +86,72 @@
     align-items: center;
     border-bottom-right-radius: 10px ;
 }
+
+.bubbleContainer{
+    width: 50%;
+    display: flex;
+    gap: 8px;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.bubble{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    color: #555;
+    padding: 24px;
+    font-size: 18px;
+    border-radius: 20px 20px 0 20px;
+}
+
+.bubbleContainer img{
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    object-fit: cover;
+    background-color: #dd4c62;
+}
+
+.certificate{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
+    line-height: 24px;
+    font-weight: 300;
+    color: #ddd;
+}
+
+.certificate img{
+    width: 70px;
+    height: 70px;
+}
+
+.contactLink{
+    margin-bottom: 50px;
+}
+
+.contactButton{
+    position: relative;
+}
+
+.circleText{
+    letter-spacing: 3px;
+    font-size: 20px;
+}
+
+.arrow{
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
