--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -4,6 +4,31 @@
     display: flex;
 }
 
+.bg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.hImg{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 80%;
+    width: max-content;
+}
+
+.hImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .hSection{
     width: 50%;
     height: 100%;
@@ -84,7 +109,7 @@
     padding: 0 8px;
     display: flex;
     align-items: center;
-    border-bottom-right-radius: 10px ;
+    border-bottom-right-radius: 10px;
 }
 
 .bubbleContainer{
