--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -143,6 +143,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    align-items: center;
     text-align: center;
     line-height: 24px;
     font-weight: 300;
