--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -181,3 +181,70 @@
     align-items: center;
     justify-content: center;
 }
+
+@media (max-width: 1534px) {
+    .hTitle{
+        font-size: 72px;
+    }    
+}
+
+@media (max-width: 1280px) {
+    .bg{
+        height: 60%;
+        top: auto;
+        bottom: 0;
+    }  
+
+    .hImg{
+        height: 100%;
+    }
+
+    .awards{
+        width: 60%;
+    }
+
+    .bubbleContainer{
+        width: 100%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .bg{
+        height: 50%;
+    }
+    .hTitle{
+        font-size: 72px;
+    }
+}
+
+@media (max-width: 768px) {
+    .hero{
+        flex-direction: column;
+    }
+    .bg{
+        height: 60%;
+    }
+    .hSection{
+        width: 100%;
+    }
+    .hSection.left{
+        align-items: center;
+        text-align: center;
+        gap: 36px;
+    }
+    .hSection.right{
+        justify-content: end;
+    }
+    .hTitle{
+        font-size: 48px;
+    }
+    .awards{
+        width: 100%;
+    }
+    .awardList{
+        justify-content: center;
+    }
+    .follow, .bubbleContainer, .certificate{
+        display: none;
+    }
+}
